--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@
 
 .row-table {
     display: table;
+    background-color: red;
 }
 
 .section-column {
@@ -147,33 +148,122 @@ header {
 }
 
 .form-group {
-    margin-left: 10px;
+    margin-left: 0px;
+    margin-bottom: 0px;
     background: red;
-    padding-bottom: 0;
-    padding-top: 0;
-    padding-left: 50px;
-    padding-right: 50px;
-    font-family: "Just Another Hand", cursive;
+    padding: 30px 30px 30px 30px;
+    font-family: "Indie Flower", cursive;
     color: #fff;
     font-size: 20px;
     font-weight: 300;
 }
 
 .btn {
-    font-family: "Just Another Hand", cursive;
+    font-family: "Indie Flower", cursive;
     color: red;
     background: yellow;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
     font-size: 25px;
-    margin-left: 85%;
-    margin-bottom: 10px;
+    float: right;
+    
 }
 
-.text-muted {
-    color: #fff;
+.form-text {
+    color: white;
+}
+
+/*--------------------------------------------Band Cards.css*/
+
+.band-cards {
+    padding-bottom: 0;
+    background-color: red;
+    font-family: "Indie Flower", cursive;
+    color: white;
+}
+
+.card-body {
+    padding: 20px;
+    margin-bottom: 0;
+    background-color: red;
+    font-family: "Indie Flower", cursive;
+    color: white;
+}
+
+.member-head {
+    font-family: "Indie Flower", cursive;
+    color: white;
+}
+
+.card-text {
+    font-family: "Indie Flower", cursive;
+    background-color: red;
+    color: white;
+    font-size: 18px;
+    padding-left: 10px;
+}
+
+.card-img-top {
+    padding: 0;
+    min-height: 280px;
+    max-height: 280px;
+    margin-bottom: 0;
+}
+
+/*--------------------------------------------Table.css*/
+
+.tour-container {
+    background-color: red;
+    color: yellow;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-left: 20px;
+}
+
+.tour-header {
+    font-family: "Modak", cursive;
+    font-size: 40px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+}
+
+.tour-foot {
+    padding-top: 20px;
+    font-family: "Just Another Hand", cursive;
+    font-size: 35px;
+}
+
+.tour-list {
+    padding-left: 75px;
+    padding-right: 75px;
+    float: none;
+}
+
+.table-tour {
+    background-color: red;
+    float: none;
+    font-family: "Indie Flower", cursive;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+/*--------------------------------------------Media*/
+
+.media-content {
+    background-color: yellow;
+    padding-bottom: 50px;
+    display: block;
+}
+
+.thumbnail {
+    padding: 20px;
+    min-height: 360px;
+    max-height: 360px;
+}
+
+.embed-responsive {
+    background-color: red;
 }
 
 /*--------------------------------------------Hover.css*/
