--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -3,7 +3,6 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  margin: 3rem;
   color: #5a5a5a;
 }
 
@@ -75,14 +74,14 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+  height: 40rem;
 }
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 32rem;
+  height: 40rem;
 }
 
 
@@ -110,9 +109,8 @@ body {
   font-family: "Indie Flower", cursive;
 }
 
-.featurette-divider {
-  margin-right: 5rem 0;/* Space out the Bootstrap <hr> more */
-  padding: 10px;
+.band-featurette {
+  margin: 5rem;
 }
 
 /* Thin out the marketing headings */
@@ -120,6 +118,11 @@ body {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -.05rem;
+}
+
+.bd-placeholder-img {
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -136,7 +139,8 @@ body {
 }
 
 .gallery-images {
-  padding: 30px;
+  margin-top: 30px;
+  padding: 50px, 30px, 30px, 30px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
