--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -144,6 +144,7 @@ body {
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
+  text-align: center;
 }
 
 .audio-links {
