--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -9,6 +9,14 @@ body {
 /* COLORS &FONTS
 ------------------------------------------------- */
 
+.page-title {
+  font-family: "Modak", cursive;
+  color: #343a40;
+  text-align: center;
+  font-size: 60px;
+  margin-top: 100px;
+}
+
 .navbar-brand {
   font-family: "Modak", cursive;
   font-weight: 500;
@@ -49,10 +57,15 @@ body {
   font-family: "Indie Flower", cursive;
 }
 
-.fa {
+.main-social-links {
   color: #717D7E;
   font-size: 80px;
   padding-bottom: 20px;
+}
+
+.social-links {
+  float: center;
+  color: #717D7E;
 }
 
 .btn {
@@ -110,7 +123,7 @@ body {
 }
 
 .band-featurette {
-  margin: 5rem;
+  margin: 0rem 5rem 5rem 5rem;
 }
 
 /* Thin out the marketing headings */
@@ -134,17 +147,28 @@ body {
   -moz-border-radius: 30px;
   border-radius: 30px;
   padding: 20px;
-  min-height: 100%;
-  min-width: 100%;
+  text-align: center;
+  min-height: 75%;
+  min-width: 75%;
+  background-attachment: fixed;
 }
 
 .gallery-images {
-  margin-top: 30px;
-  padding: 50px, 30px, 30px, 30px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   border-radius: 30px;
   text-align: center;
+  background-color: #343a40;
+  color: white;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  font-family: "Just Another Hand", cursive;
+  font-size: 30px;
+  min-height: 75%;
+  min-width: 75%;
+  background-attachment: fixed;
 }
 
 .audio-links {
@@ -154,25 +178,47 @@ body {
   text-align: center;
   background-color: #343a40;
   color: white;
-  margin-bottom: 25px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   font-family: "Just Another Hand", cursive;
   font-size: 30px;
-
-  
 }
 
-.media-video {
-  margin-top: 25px;
+.video-player {
+  background-color: #343a40;
+  color: white;
+  font-size: 45px;
+  font-family: "Just Another Hand", cursive;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  padding-top: 35px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  text-align: center;
 }
 
+.media-titles {
+  font-size: 38px;
+  font-family: "Indie Flower", cursive;
+}
+
+.footer {
+  text-align: center;
+  font-family: "Indie Flower", cursive;
+}
 
 
 /* BOOKINGS
 -------------------------------------------------- */
 
 .contact-heading {
-  margin-top: 50px;
-  padding-top: 50px;
+  margin-top: 0px;
+  padding-top: 0px;
   padding-bottom: 20px;
   text-align: center;
   font-family: "Indie Flower", cursive;
@@ -226,4 +272,12 @@ body {
 
 .container {
   padding-top: 25px;
+  float: center;
+  text-align: center;
+  color: #717D7E;
+  font-family: "Indie Flower", cursive;
+}
+
+.fa {
+  color: #717D7E;
 }
